--- a/helado.html
+++ b/helado.html
@@ -1,41 +1,87 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./helado.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="index.css">
+    <title>Hayro Sanchez</title>
 </head>
+
 <body>
     <header>
+        <nav>
+            <div>
+                <a href="#">
+                    <img src="https://w7.pngwing.com/pngs/68/571/png-transparent-chocolate-ice-cream-milkshake-sundae-ice-cream-cones-sundae-cream-food-frozen-dessert-thumbnail.png"
+                        alt="" height="100" />
+                </a>
+                <ul>
+                    <li>
+                        <a href="#">Menu</a>
 
+                    </li>
+                    <li>
+                        <a href="#">Historia</a>
+                    </li>
+                    <li>
+                        <a href="#">Ubicaciones</a>
+                    </li>
+                    <li>
+                        <a href="#">Galeria</a>
+                    </li>
+                    <li>
+                        <a href="#">Promociones y Ofertas</a>
+                    </li>
+                    <li>
+                        <a href="#">Contacto</a>
+
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/explore/tags/helados/?hl=es-la" target="_blank"
+                            rel="noopener noreferrer"><i class="bi bi-instagram"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/explore/tags/helados/?hl=es-la" target="_blank"
+                            rel="noopener noreferrer"><i class="bi bi-facebook"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/explore/tags/helados/?hl=es-la" target="_blank"
+                            rel="noopener noreferrer"><i class="bi bi-twitter"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/explore/tags/helados/?hl=es-la" target="_blank"
+                            rel="noopener noreferrer"><i class="bi bi-github"></i>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </header>
-    <nav>
-
-    </nav>
     <main>
-        <section>
-            <h1>
-
-            </h1>
-            <article>
-<div>
-
-</div>
-            </article>
-            <article>
+        <article>
+            <div>
+                <div></div>
+                <h1>
+                    En nuestra página web podrás encontrar información detallada sobre nuestros sabores, así como opciones para personalizar tu helado con una gran variedad de complementos y toppings. Además, también ofrecemos una selección de postres y bebidas heladas, como batidos, smoothies y café helado. 
+                </h1>
+                <h2>
+                    Nuestra heladería es un lugar donde los clientes pueden disfrutar de los helados más deliciosos y frescos que se puedan imaginar. Todos nuestros helados se hacen con ingredientes de alta calidad, sin conservantes ni colorantes artificiales, y se preparan diariamente en la tienda para garantizar su frescura.
+                </h2>
                 <p>
-
+                    Tenemos una amplia variedad de sabores, desde los clásicos como la vainilla y el chocolate hasta opciones más atrevidas como el helado de pistacho o de marcha. Además, ofrecemos opciones sin lactosa y sin azúcar añadida para aquellos que tienen necesidades dietéticas especiales.
                 </p>
-            </article>
-        </section>
-        <section>
+                <a href="#">contacto</a>
+            </div>
+        </article>
+        <h1>
 
-        </section>
-        <footer>
-            
-        </footer>
+        </h1>
     </main>
-    
 </body>
+
 </html>
