--- a/helado.html
+++ b/helado.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <div>
-                <a href="#">
+                <a class="logo" href="#">
                     <img src="https://w7.pngwing.com/pngs/68/571/png-transparent-chocolate-ice-cream-milkshake-sundae-ice-cream-cones-sundae-cream-food-frozen-dessert-thumbnail.png"
                         alt="" height="100" />
                 </a>
