--- a/helado.html
+++ b/helado.html
@@ -15,8 +15,8 @@
         <nav>
             <div class="logo">
                 <a href="#">
-                    <img src="https://assets.stickpng.com/thumbs/61d1d1e6c9971e0004366144.png" alt="" class="logo"
-                        height="100">
+                    <img src="https://assets.stickpng.com/thumbs/5c7a54c135ac4002ae775c2a.png" alt="" class="logo"
+                        height="180px" width="180px">
                 </a>
                 <ul>
                     <li class="dropdown" onclick="toggleDropdown(this)">
