--- a/helado.html
+++ b/helado.html
@@ -23,10 +23,10 @@
                         <a class="Lineamenu" href="#"><img src="https://cdn-icons-png.flaticon.com/512/16/16033.png"
                                 alt="" height="40px" width="40px"></a>
                         <ul class="dropdown-content">
-                            <li><a class="lista" href="#">Historia</a></li>
-                            <li><a class="lista" href="#">Galeria</a></li>
+                            <li><a class="lista" href="#Historia">Historia</a></li>
+                            <li><a class="lista" href="#Galeria">Galeria</a></li>
                             <li><a class="lista" href="#">Promociones y Ventas</a></li>
-                            <li><a class="lista" href="#">Contacto</a></li>
+                            <li><a class="lista" href="#Redes">Contacto</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -40,12 +40,23 @@
     </header>
 
     <main>
-        <section>
+        <article>
+                <h1 id="Historia">
+                    Como fue creado <SPan style="font-size: 40px;font-weight: 900; color:#ca43c38a;font-weight: 1000;">PARAISO DE HELADOS</SPan>
+                </h1>
+                <p>Había una vez un apasionado amante de los helados llamado Alejandro. Desde muy joven, Alejandro soñaba con crear su propia heladería, un lugar mágico donde los clientes pudieran disfrutar de deliciosos y refrescantes helados.
+
+                    Un día, Alejandro decidió hacer realidad su sueño y comenzó a trabajar arduamente en su proyecto. Se sumergió en la creación de recetas únicas y deliciosas, combinando ingredientes frescos y sabores exquisitos. Probó diferentes combinaciones de frutas, chocolates, nueces y especias hasta que finalmente encontró la combinación perfecta para cada helado.
+                    
+                    Para capturar la esencia de su visión, Alejandro decidió llamar a su heladería "Paraíso de Helados". Quería que los clientes se sintieran transportados a un paraíso lleno de sabores tentadores y experiencias dulces.</p>
+           
+        </article>
+        <section id="Galeria">
             <p> <span
                     style="font-size: 50px; font-weight: bold;font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Presentacion</span>
             </p>
             <p><span style="font-size: 50px; font-weight: bold;">De </span>
-                <span style="font-size: 70px;font-weight: 900; color:#a35ac0;font-weight: 1000;"> Helados Paraiso
+                <span style="font-size: 70px;font-weight: 900; color:#5724e4c2;font-weight: 1000;"> Helados Paraiso
                 </span>
             </p>
             <h2>
@@ -62,11 +73,11 @@
                 </swiper-container>
             </div>
         </section>
-        <article>
+        <article >
             <h3>
                 Sabores
             </h3>
-            <div class="container">
+            <div class="container" >
                 <div class="card">
                     <img src="https://caracol.com.co/resizer/RPfk6-Pr3-RDHr3hcTWBvfE0fCk=/650x488/filters:format(jpg):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/prisaradioco/OWPEDADJGFNSXG7ROQ4QVD46DI.jpg"
                         alt="Helado de chocolate">
@@ -88,8 +99,18 @@
             </div>
         </article>
     </main>
-
     <footer>
+        <ul class="redes" id="Redes">
+            <li>
+                <a href="https://www.facebook.com/"><i class="bi bi-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/"><i class="bi bi-instagram"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com/home"><i class="bi bi-twitter"></i></a>
+            </li>
+        </ul>
         <p>&copy; 2023 Heladería Delicias - Todos los derechos reservados</p>
     </footer>
 </body>
